2002-09-12  Havoc Pennington  <hp@redhat.com>

	* src/workspace.c (meta_workspace_screen_index)
	(meta_workspace_index): fix compiler warnings

	* src/tools/metacity-window-demo.c (menu_items): add a test for
	dialogs with no transient parent

	* src/place.c (find_first_fit): Try placing window at origin of
	first Xinerama, even if there are no windows to place next to;
	makes placement work when no other windows are open on the screen.
	
2002-09-09  Havoc Pennington  <hp@pobox.com>

	* configure.in: 2.4.1

2002-09-09  Christian Neumair  <chris@gnome-de.org>

	* src/keybindings.c: Make virtual desktops apply
	instantly and still show the pager popup by
	Benjamin Kahn <xkahn@zoned.net>, fixes #86590.

2002-09-06  Frederic Crozat  <fred@crozat.net>

	* src/themes/Crux/metacity-theme-1.xml: Fix titlebar 
	glitch on small dialogs.

2002-09-06  Arvind Samptur <arvind.samptur@wipro.com>
	* theme-format.txt : corrected some of the attributes
	which were not in sync with theme-parser.c
	Patch  from Jim Bowen. #92057.

2002-09-05  Havoc Pennington  <hp@pobox.com>

	* configure.in: put ro back in ALL_LINGUAS

2002-09-05  Havoc Pennington  <hp@redhat.com>

	* configure.in (ALL_LINGUAS): remove 'ro' from ALL_LINGUAS, it
	contained invalid XML and broke the build. No <> in the
	translations of gconf keys!

2002-09-04  Marius Andreiana <mandreiana@yahoo.com>

	* configure.in: added 'ro' to ALL_LINGUAS

2002-09-03  Havoc Pennington  <hp@pobox.com>

	* src/display.c (meta_display_get_tab_current): new function

	* src/keybindings.c (do_choose_window): apply modified patch from
	JeyaSudha to still display tab popup if only one window is on the
	desktop.

2002-06-25 JeyaSudha <jeyasudha.duraipandy@wipro.com>
 
 	* src/session.c, src/window.c: Session saves the unmaximized
	postion, size of a maximized window. #86059
 
2002-09-03  Havoc Pennington  <hp@pobox.com>

	* src/frames.c (meta_frames_update_prelit_control): don't filter
	out prelight for unmaximize button. #83860